--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,38 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+ion-toolbar,
+ion-content,
+.hero--no-data {
+  background: var(--backgroundApp);
+  --background: var(--background);
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+ion-title {
+  color: var(--white);
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
+.list__heroes {
+  display: grid;
+  background: var(--backgroundApp);
+}
 
-  color: #8c8c8c;
+.list__heroes--columns {
+  grid-template-columns: 1fr 1fr;
+}
 
+.hero__card {
   margin: 0;
+  border-radius: 0.25rem;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  height: 5rem;
+  margin: 0.5rem;
 }
 
-#container a {
-  text-decoration: none;
+.hero--text {
+  color: var(--white);
+  font-weight: bold;
+  text-shadow: 0.063rem 0.063rem 0.125rem var(--black);
 }
